# robot_arm

./: .gitignore
ros2_ws/: readme.md  requirements.txt
ros2_ws/src/: frames_2026-02-12_10.34.01.gv
ros2_ws/src/doosan-robot2/dsr_common2/imp/: DRFC.py
ros2_ws/src/doosan-robot2/dsr_common2/include/: DRFLEx.h  dsr_robot.h
ros2_ws/src/doosan-robot2/dsr_controller2/config/: dsr_controller2.yaml  dsr_controller2_p3020.yaml
ros2_ws/src/doosan-robot2/dsr_controller2/include/dsr_controller2/: dsr_controller2.hpp
ros2_ws/src/doosan-robot2/dsr_controller2/src/: dsr_controller2.cpp
ros2_ws/src/doosan-robot2/dsr_description2/: CMakeLists.txt
ros2_ws/src/doosan-robot2/dsr_description2/ros2_control/: a0509.mj_ros2_control.xacro  a0912.mj_ros2_control.xacro  e0509.mj_ros2_control.xacro  h2017.mj_ros2_control.xacro  h2515.mj_ros2_control.xacro  m0609.mj_ros2_control.xacro  m0617.mj_ros2_control.xacro  m1013.mj_ros2_control.xacro  m1509.mj_ros2_control.xacro
ros2_ws/src/doosan-robot2/dsr_description2/urdf/: a0509.blue.urdf  a0509.white.urdf  m0617.blue.urdf  m0617.white.urdf  m1013_isaac_sim.urdf
ros2_ws/src/doosan-robot2/dsr_description2/xacro/: macro.a0509.blue.xacro  macro.a0509.white.xacro
ros2_ws/src/doosan-robot2/dsr_gazebo2/launch/: dsr_gazebo.launch.py  dsr_spawn_on_gazebo.launch.py
ros2_ws/src/doosan-robot2/dsr_hardware2/src/: dsr_hw_interface2.cpp
ros2_ws/src/doosan-robot2/dsr_msgs2/: CMakeLists.txt  package.xml
ros2_ws/src/my_ros2_assignment/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_ros2_assignment/my_ros2_assignment/: my_node.py
(+9 files in other folders)
