<?xml version="1.0"?>
<package format="3">
  <name>my_ros2_assignment</name>
  <version>0.0.0</version>
  <description>ROS2 assignment GUI control</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <!-- 👇 여기 중요 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

